// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should build a list of affected files based on a file 1`] = `
"[
  'src/d.js',
  'src/c/index.js',
  'src/nested/a.js',
  'tests/a.test.js',
  'tests/c.test.js'
]"
`;

exports[`should build a list of affected files based on a file 2`] = `"[ 'tests/utils.js', 'tests/c.test.js' ]"`;

exports[`should merge the graph with files from a different entry point 1`] = `
"digraph G {
  \\"src/nested/b.js\\";
  \\"src/nested/a.js\\";
  \\"src/c/index.js\\";
  \\"src/d.js\\";
  \\"tests/a.test.js\\";
  \\"tests/c.test.js\\";
  \\"tests/utils.js\\";
  \\"src/nested/a.js\\" -> \\"src/nested/b.js\\";
  \\"src/nested/a.js\\" -> \\"src/c/index.js\\";
  \\"src/c/index.js\\" -> \\"src/d.js\\";
  \\"tests/a.test.js\\" -> \\"src/nested/a.js\\";
  \\"tests/c.test.js\\" -> \\"src/c/index.js\\";
  \\"tests/c.test.js\\" -> \\"tests/utils.js\\";
}
"
`;

exports[`should visit the files that are dependents from the provided main file 1`] = `
"digraph G {
  \\"src/nested/b.js\\";
  \\"src/nested/a.js\\";
  \\"src/c/index.js\\";
  \\"src/d.js\\";
  \\"tests/a.test.js\\";
  \\"src/nested/a.js\\" -> \\"src/nested/b.js\\";
  \\"src/nested/a.js\\" -> \\"src/c/index.js\\";
  \\"src/c/index.js\\" -> \\"src/d.js\\";
  \\"tests/a.test.js\\" -> \\"src/nested/a.js\\";
}
"
`;
